[metadata]
name = ansq
version = 0.1.0
description = Written with native Asyncio NSQ package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/list-family/ansq
author = LiST
author_email = support@list.family
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    aiohttp>=1.0.0
    attrs>=20.1
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude = tests

[options.package_data]
ansq = py.typed

[coverage:run]
branch = True
source = .

[coverage:report]
include =
    ansq/*
    tests/*

[flake8]
max-line-length = 88
exclude = build/*, dist/*, ansq.egg-info/*, .tox/*, .venv/*, .git/*, .eggs/*
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

[isort]
profile = black

[mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

[mypy-tests.*]
disallow_untyped_defs = false

[mypy-examples.*]
ignore_errors = true
